--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -59,7 +59,7 @@
 
 .hero-text>div:nth-of-type(3) {
     font-style: 1rem;
-    font-weight: 700;
+    font-weight: 200;
     text-transform: none;
     letter-spacing: 1px;
     width: 80%;
@@ -90,18 +90,19 @@
     display: flex;
     gap: 1rem;
     font-weight: normal;
+    font-size: 14px;
 }
 
 .hero-buttons>:nth-child(1) {
     color: white;
     background-color: var(--orange);
-    width: 8rem;
+    width: 7rem;
 }
 
 .hero-buttons>:nth-child(2) {
     color: white;
     background-color: transparent;
-    width: 8rem;
+    width: 7rem;
     border: 2px solid var(--orange)
 }
 
@@ -124,4 +125,69 @@
     position: absolute;
     right: 4rem;
     top: 7rem;
+}
+
+.heart-rate>:nth-child(1) {
+    width:2rem
+}
+.heart-rate>span:nth-of-type(1) {
+    font-size: 1rem;
+    color: var(--gray)
+}
+.heart-rate>span:nth-of-type(2) {
+    font-size: 1.5rem;
+    color: white;
+    border-radius:5px;
+}
+
+.hero-right>:nth-child(1){
+    width:22.5rem;
+    height:32.5rem;
+    position:absolute;
+    right: 34.8%;
+    bottom: 3.4%;
+}
+
+.hero-right>:nth-child(2) {
+    width:15rem;
+    height:25rem;
+    position:absolute;
+    left: -45%;
+    top: 10%;
+    z-index:-1;
+}
+
+.calories {
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+    background-color: var(--caloryCard);
+    width: fit-content;
+    padding: 1rem;
+    align-items: start;
+    border-radius: 5px;
+    position: absolute;
+    right: 28rem;
+    bottom: 6rem;
+    height: 4rem;
+}
+
+.calories>:nth-child(1){
+    width: 3rem;
+    height: 4.2rem;
+    margin-right: 1rem;
+}
+
+.calories>div {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.calories>div>span:nth-of-type(1) {
+    color: var(--gray);
+}
+.calories>div>span:nth-of-type(2) {
+    color: white;
+    font-size: 1.5rem;
 }
